--- a/package.json
+++ b/package.json
@@ -3,26 +3,37 @@
   "version": "1.0.0",
   "description": "my starter theme using scss",
   "scripts": {
-    "css": "node-sass --output-style compressed --include-path scss assets/scss/source.scss assets/css/main.css",
-    "css-rtl": "node-sass --output-style compressed --include-path scss assets/scss/source-rtl.scss assets/css/main-rtl.css",
+    "css": "node-sass --include-path scss assets/scss/source.scss assets/css/main.css",
+    "css-rtl": "node-sass --include-path scss assets/scss/source-rtl.scss assets/css/main-rtl.css",
     "watch": "nodemon -e scss -x \"npm run css\"",
     "watch-rtl": "nodemon -e scss -x \"npm run css-rtl\"",
     "js-build": "babel assets/es --out-dir assets/js",
     "js-watch": "npm run js-build -- --watch",
-    "start": "npm-run-all --parallel watch js-watch watch-rtl"
+    "start": "npm-run-all --parallel watch js-watch watch-rtl",
+    "css-postcss": "postcss --use autoprefixer --output assets/css/main.css assets/css/main.css",
+    "css-rtl-postcss": "postcss --use autoprefixer --output assets/css/main-rtl.css assets/css/main-rtl.css",
+    "css-deploy": "npm run css && npm run css-postcss && npm run css-minify",
+    "css-rtl-deploy": "npm run css-rtl && npm run css-rtl-postcss && npm run css-rtl-minify",
+    "deploy": "npm run css-deploy && npm run js-build",
+    "deploy-rtl": "npm run css-rtl-deploy && npm run js-build",
+    "css-minify": "cleancss --level 1 --format breaksWith=lf --source-map --source-map-inline-sources --output assets/css/main.min.css assets/css/main.css",
+    "css-rtl-minify": "cleancss --level 1 --format breaksWith=lf --source-map --source-map-inline-sources --output assets/css/main-rtl.min.css assets/css/main-rtl.css"
   },
   "author": "yahia",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.7.4",
     "node-sass": "^4.13.1",
-    "nodemon": "^1.11.0",
+    "nodemon": "^2.0.2",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015-ie": "^6.7.0",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^7.1.0"
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "clean-css-cli": "^4.3.0",
     "jquery": "^3.4.1"
   }
 }
