--- a/package.json
+++ b/package.json
@@ -2,22 +2,23 @@
   "name": "my-starter-theme",
   "version": "1.0.0",
   "description": "my starter theme using scss",
+  "main": "index.js",
   "scripts": {
     "css": "node-sass --include-path scss assets/scss/source.scss assets/css/main.css",
     "css-rtl": "node-sass --include-path scss assets/scss/source-rtl.scss assets/css/main-rtl.css",
     "watch": "nodemon -e scss -x \"npm run css\"",
     "watch-rtl": "nodemon -e scss -x \"npm run css-rtl\"",
-    "js-build": "babel assets/es --out-dir assets/js",
+    "js-build": "babel assets/es --out-dir dist/js",
     "js-watch": "npm run js-build -- --watch",
     "start": "npm-run-all --parallel watch js-watch watch-rtl",
-    "css-postcss": "postcss --use autoprefixer --output assets/css/main.css assets/css/main.css",
-    "css-rtl-postcss": "postcss --use autoprefixer --output assets/css/main-rtl.css assets/css/main-rtl.css",
+    "css-postcss": "postcss --use autoprefixer --no-map --output assets/css/main.css assets/css/main.css",
+    "css-rtl-postcss": "postcss --use autoprefixer --no-map --output assets/css/main-rtl.css assets/css/main-rtl.css",
     "css-deploy": "npm run css && npm run css-postcss && npm run css-minify",
     "css-rtl-deploy": "npm run css-rtl && npm run css-rtl-postcss && npm run css-rtl-minify",
     "deploy": "npm run css-deploy && npm run js-build",
     "deploy-rtl": "npm run css-rtl-deploy && npm run js-build",
-    "css-minify": "cleancss --level 1 --format breaksWith=lf --source-map --source-map-inline-sources --output assets/css/main.min.css assets/css/main.css",
-    "css-rtl-minify": "cleancss --level 1 --format breaksWith=lf --source-map --source-map-inline-sources --output assets/css/main-rtl.min.css assets/css/main-rtl.css"
+    "css-minify": "cleancss --level 1 --format breaksWith=lf --inline all --output dist/css/main.min.css assets/css/main.css",
+    "css-rtl-minify": "cleancss --level 1 --format breaksWith=lf --inline all --output dist/css/main-rtl.min.css assets/css/main-rtl.css"
   },
   "author": "yahia",
   "license": "ISC",
