--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-file-include": "^2.2.2",
+    "gulp-filter": "^6.0.0",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^8.0.0",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-webp": "^4.0.1",
     "gulp-zip": "^5.0.1",
+    "imagemin-webp": "^5.1.0",
+    "plugin-error": "^1.0.1",
+    "through2": "^3.0.1",
     "vinyl-named": "^1.1.0",
     "webpack-stream": "^5.2.1",
     "yargs": "^15.3.1"
