used a more advanced css optimizer

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@babel/register": "^7.9.0",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
+    "cssnano": "^4.1.10",
+    "cssnano-preset-advanced": "^4.0.7",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
