--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "starter_theme",
-  "version": "2.9.5",
+  "version": "2.9.6",
   "description": "my starter theme",
   "main": "index.js",
+  "link": "http://gac.local/",
   "scripts": {
     "start": "gulp",
     "build": "gulp build --prod"
@@ -18,12 +19,14 @@
     "cssnano": "^4.1.10",
     "cssnano-preset-advanced": "^4.0.7",
     "del": "^5.1.0",
+    "fibers": "^5.0.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-file-include": "^2.2.2",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^8.0.0",
+    "gulp-purgecss": "^3.1.3",
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
@@ -31,12 +34,11 @@
     "gulp-zip": "^5.0.1",
     "imagemin-webp": "^5.1.0",
     "plugin-error": "^1.0.1",
+    "sass": "^1.32.0",
     "through2": "^3.0.1",
     "vinyl-named": "^1.1.0",
     "webpack-stream": "^5.2.1",
-    "yargs": "^15.3.1",
-    "sass": "^1.32.0",
-    "fibers": "^5.0.0"
+    "yargs": "^15.3.1"
   },
   "dependencies": {
     "animate.css": "^4.1.0",
@@ -47,6 +49,7 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.14.3",
     "slick-carousel": "^1.8.1",
-    "tiny-slider": "^2.9.2"
+    "tiny-slider": "^2.9.2",
+    "website-scraper": "^4.2.3"
   }
 }
